# NodriftLauncher

./: .gitignore  CLAUDE.md  LICENSE  README.md  index.html  package-lock.json  package.json
.claude/: launch.json
.github/workflows/: windows-build.yml
docs/: logo-prompt.md  website-prompt.md
src/: App.tsx  index.css  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/resources/main-client/: BUNDLED.md
src-tauri/src/: accounts.rs  app_settings.rs  instances.rs  launch.rs  lib.rs  loaders.rs  main.rs  modpack.rs  modrinth.rs  mods.rs  paths.rs  prism.rs
src/components/: Button.tsx  ConsoleDrawer.tsx  ImportModal.tsx  InstanceCard.tsx  InstanceModal.tsx  ModCard.tsx  ModDetail.tsx  Modal.tsx  Placeholder.tsx  Sidebar.tsx  StopConfirm.tsx
src/lib/: api.ts
src/pages/: AccountsPage.tsx  BrowsePage.tsx  InstanceDetailPage.tsx  InstancesPage.tsx  SettingsPage.tsx
src/store/: accounts.ts  instances.ts  launch.ts  settings.ts  ui.ts
