[package]
name = "nodrift-launcher"
version = "0.1.0"
description = "Nodrift Launcher — a custom Minecraft launcher"
authors = ["lmcoolj"]
license = "MIT"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "nodrift_launcher_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
# Reading .mrpack / .zip modpack archives + mod jar metadata.
zip = "2"
base64 = "0.22"

# Minecraft launching: Microsoft auth, mod loaders, Java auto-download.
# Verified API — see memory/lyceris-api-reference.md.
# Vendored fork of lyceris 1.1.3: patched downloader for fast parallel installs
# (see vendor/lyceris/src/http/downloader.rs "NODRIFT PATCH").
lyceris = { path = "../vendor/lyceris" }
# Async runtime + an HTTP client compatible with lyceris (reqwest 0.12, rustls).
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", default-features = false, features = [
    "json",
    "rustls-tls-native-roots",
] }
# Secure token storage: Windows Credential Manager / macOS Keychain.
keyring = { version = "3", features = ["apple-native", "windows-native"] }
# Instance IDs.
uuid = { version = "1", features = ["v4"] }

